updating chat again

--- a/BanVeDiTourDuLich/Views/Admin/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/Index.cshtml
@@ -163,9 +163,9 @@
                             </div>
                         </div>
                         <!-- /.card-header -->
-                        <div class="card-body">
+                        <div class="card-body" id="card">
                             <!-- Conversations are loaded here -->
-                            <div class="direct-chat-messages">
+                            <div class="direct-chat-messages" id="#">
                                 <!-- Message. Default to the left -->
                                 <div class="direct-chat-msg">
                                     <div class="direct-chat-infos clearfix">
@@ -236,7 +236,7 @@
                             <!--/.direct-chat-messages-->
                             <!-- Contacts are loaded here -->
                             <div class="direct-chat-contacts">
-                                <ul class="contacts-list">
+                                <ul class="contacts-list" id="#">
                                     <li>
                                         <a href="#">
                                             <img class="contacts-list-img"
