--- a/BanVeDiTourDuLich/Views/Admin/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/Index.cshtml
@@ -360,11 +360,11 @@
                             <canvas class="chart"
                                     id="line-chart"
                                     style="
-                        min-height: 250px;
-                        height: 250px;
-                        max-height: 250px;
-                        max-width: 100%;
-                      "></canvas>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              min-height: 250px;
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              height: 250px;
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              max-height: 250px;
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              max-width: 100%;
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          "></canvas>
                         </div>
                         <!-- /.card-body -->
                         <div class="card-footer bg-transparent">
@@ -454,8 +454,11 @@
     </section>
     <!-- /.content -->
 </div>
-@section scripts
+@section styles
 {
-    
-   
+    <style>
+        .index-20{
+            z-index: 20;
+        }
+    </style>
 }
