--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -273,13 +273,13 @@
                     <div class="project-wrap">
                         <a href="/Tour/ChiTietChuyenDi/@tour.Tour.MaTour"
                            class="img"
-                           style="background-image: url(@tour.Tour.DiaDiemDen.DuongDanAnh)"></a>
+                           style="background-image: url(@tour.DiaDiem.DuongDanAnh)"></a>
                         <div class="text p-4">
                             <span class="price">Từ @TourController.AddDotAndCommaToInteger(@tour.GiaTien) VNĐ/người</span>
                             <span class="days">Chuyến đi 1 ngày</span>
-                            <h3><a href="#">@tour.Tour.DiaDiemDi.TenDiaDiem - @tour.Tour.DiaDiemDen.TenDiaDiem</a></h3>
+                            <h3><a href="#">@tour.Tour.DiaDiemDen.TenDiaDiem - @tour.Tour.DiaDiemDi.TenDiaDiem</a></h3>
                             <p class="location">
-                                <span class="ion-ios-map"></span> @tour.Tour.DiaDiemDen.DiaChi
+                                <span class="ion-ios-map"></span> @tour.Tour.DiaDiemDi.DiaChi
                             </p>
                             <ul>
                                 <li><span class="flaticon-shower"></span>2</li>
