--- a/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
@@ -11,7 +11,7 @@
         <div style="align-items: center;" class="row justify-content-center pb-4 detail-destination">
             <div class="col-md-4 ftco-animate image-box">
                 <div class="project-wrap">
-                    <a href="#" class="img" style="        background-image: url( @Model.Tour.DiaDiemDen.DuongDanAnh );
+                    <a href="#" class="img" style="        background-image: url( @Model.Tour.DiaDiemDi.DuongDanAnh );
         border-radius: 6px;
         background-position: center;
 "></a>
@@ -19,14 +19,14 @@
             </div>
             <div class="motachitiet" style="flex: 0.8; font-weight: 600">
                 <div class="sec1">
-                    <span class="diadiem">Điểm đến:@Model.Tour.DiaDiemDen.TenDiaDiem</span>
+                    <span class="diadiem">Điểm đến:@Model.Tour.DiaDiemDi.TenDiaDiem</span>
                 </div>
                 <div class="sec2">
                     <span class="ngaykhoihanh">Khởi hành:@Model.Tour.ThoigianDi</span>
-                    <span class="songay">@Model.Tour.SoGio</span>
-                    <span class="noikhoihanh">HN</span>
-                </div>
+                     Số giờ: <span class="songay">@Model.Tour.SoGio</span>
 
+                </div>
+                <div>    <span class="noikhoihanh">Nơi khởi hành: @Model.Tour.DiaDiemDen.TenDiaDiem</span></div>
                 <div class="sec4">
                     <ul>
                         <li><span class="flaticon-shower"></span>2</li>
