--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -219,14 +219,19 @@
                 role="menu"
                 data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
-                with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                 <li class="nav-item">
                     <a id="#TongQuanLink" href="/admin/index" class="nav-link">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>Tổng quan</p>
                     </a>
                 </li>
-
+                <li class="nav-item">
+                    <a id="#QuanLyVeLink" href="/admin/QuanLyTour" class="nav-link">
+                        <i class="nav-icon fas fa-ticket-alt"></i>
+                        <p>Quản lý Tour</p>
+                    </a>
+                </li>
                 <!-- Quản lý đặt vé -->
                 <li class="nav-item">
                     <a id="#QuanLyVeLink" href="/admin/QuanLyBanVe" class="nav-link">
@@ -234,7 +239,6 @@
                         <p>Quản lý bán vé</p>
                     </a>
                 </li>
-
                 <!-- /. Quản lý đặt vé -->
                 <!-- Quản lý người dùng -->
                 <li class="nav-item">
