add chi tiet tour va phan trang

--- a/BanVeDiTourDuLich/Views/Home/Destination.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Destination.cshtml
@@ -1,4 +1,5 @@
-﻿@model BanVeDiTourDuLich.ViewModels.IndexViewModel
+﻿@using PagedList.Mvc
+@model BanVeDiTourDuLich.ViewModels.IndexViewModel
 
 @{
     ViewBag.Title = "Destination";
@@ -131,11 +132,11 @@
             <div class="col text-center">
                 <div class="block-27">
                     <ul>
-                        <li><a href="#">&lt;</a></li>
-                        <li class="active"><span>1</span></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
+                        <li><a href="/home/destination?page=1">1</a></li>
+                        
+                        <li><a href="/home/destination?page=2">2</a></li>
+                        <li><a href="/home/destination?page=3">3</a></li>
+                        <li><a href="/home/destination?page=4">4</a></li>
                         <li><a href="#">5</a></li>
                         <li><a href="#">&gt;</a></li>
                     </ul>
