--- a/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
@@ -72,6 +72,17 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div> <h3>Giới thiệu về: @Model.Tour.DiaDiemDi.TenDiaDiem</h3></div>
+        <div><p>
+    @Model.chitiet
+</p></div>
+        <div>
+            <h4>
+                Còn chần chừ gì nữa! Hãy xách balo lên và khám phá ngay đi nào!
+            </h4>
+        </div>
+    </div>
 </section>
 
 @section styles
